changed images,image zoom, fixed overflow of the nav bar to hidden and added subscribe thing

--- a/main.css
+++ b/main.css
@@ -248,7 +248,7 @@ img.logo {
         padding-top: 0;
         width: 100%;
         height: auto;
-        overflow: auto;
+        overflow: hidden;
     }
     .header li {
         display: inline-block;
