--- a/main1.css
+++ b/main1.css
@@ -8,24 +8,28 @@
 }
 .frontPageImgWidth{
     width: 100%;
-    max-height: 500px;
+    max-height: auto;
 }
 .frontPageGallery{
     margin: 0 auto;
     width: 100%;
     text-align: center;
+    float: left;
+
 }
 .articleFrontPage{
     display:inline-block;
-    width: 250px;;
-    height: 300px;
-    margin: 2%;
+    width: 30%;
+    min-width: 320px;
+    height: auto;
+    margin: 1%;
     margin-top: 20px;
     box-sizing: border-box;
+
 }
 .articleFrontPageImg{
     width: 100%;
-    height: 70%
+    height: 70%;
 }
 .articleFrontPageH1{
     clear: right;
@@ -58,10 +62,8 @@
 }
 .articleMenuImg{
 	width: 100%;
-	height: 200px;
+	height: auto;
     display: inline-block;
-    width: 300px;
-    height: 350px;
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 40px;
@@ -69,11 +71,10 @@
 /*Enlarge image when hover over*/
 .articleMenuImg:hover{
 	position:relative;
-    right:5%;
-    width:120%;
-    height:auto;
-    display:block;
-    z-index:999;
+    -webkit-transform: scale(1.4); 
+    -moz-transform: scale(1.4);
+    -o-transform: scale(1.4);
+    transform: scale(1.4);
 }
 .articleMenuH1{
 	clear: right;
@@ -100,4 +101,118 @@
 	color: white;
 	background-color: #0f9b49;
 	cursor: pointer;
+}
+
+
+
+
+
+/*subscribe pop-up*/
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+.cancelbtn, .signupbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    float: left;
+    width: 50%;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+    padding: 14px 20px;
+    background-color: #f44336;
+}
+
+/* Add padding to container1 elements */
+.container1 {
+    color: red;
+    padding: 16px;
+    display: none;
+    margin: auto auto;
+    background-color: #fff;
+    border: 5px #0f9b49 dotted;
+    border-radius: 25px;
+    text-align: center;
+
+    position: absolute;
+    z-index: 9999999;
+    top: 25%;
+
+
+  left: 0;
+  right: 0;
+  transform: translateY(-50%);
+   
+
+
+
+}
+
+/* Clear floats */
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+/* Change styles for cancel button and signup button on extra small screens */
+@media screen and (max-width: 300px) {
+    .cancelbtn, .signupbtn {
+        width: 100%;
+    }
+}
+
+
+.subscribedText, .notSubscribedText {
+    background-color: #fff;
+    border: 2px #0f9b49 dotted;
+    border-radius: 25px;
+    color: red;
+    padding: 14px 20px;
+    text-align: center;
+    display: none;
+
+
+    position: absolute;
+    z-index: 9999999;
+    top: 25%;
+
+
+    left: 0;
+    right: 0;
+    transform: translateY(-50%);
+
+}
+
+
+.closeNewsletter:hover{
+    color:white;
+    background-color: #0f9b49 ;
+    cursor: pointer;
+}
+
+.closeNewsletter{
+    width:100%;
+    border-radius: 4px;
+    text-align: center;
+    color: #0f9b49 ;
+    font-size: 20px;
+    background-color: white;
+    border: 1px solid;
+    border-color: #0f9b49 ;
 }
